--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,4 +24,4 @@ jobs:
         uses: denoland/deployctl@v1
         with:
           project: "loosedays-site"
-          entrypoint: "./main.ts"
+          entrypoint: "main.ts"
