--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,4 @@ jobs:
         uses: denoland/deployctl@v1
         with:
           project: "loosedays-site"
-          entrypoint: "main.ts"
+          entrypoint: "app/main.ts"
